[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asha-sahayak"
version = "0.1.0"
description = "AI clinical decision support for ASHA workers — OpenEnv RL environment"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.1.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.24.0",
]

[project.scripts]
server = "asha_sahayak.server.app:main"

[tool.hatch.build.targets.wheel]
packages = ["asha_sahayak"]

[tool.hatch.build.targets.wheel.sources]
"asha_sahayak" = "asha_sahayak"
